implement next/prev buttons
implement Next/PrevItem in Blog & Portfolio, added disabled class in template/sections/_portfolio.scss to disable next/Prev for no projects/blogs

--- a/public/assets/sass/template/sections/_portfolio.scss
+++ b/public/assets/sass/template/sections/_portfolio.scss
@@ -511,4 +511,8 @@
     align-items: center;
     text-transform: uppercase;
   }
+  .disabled{
+    pointer-events: none;
+    opacity: 0.5;
+  }
 }
