update portfolio to our-portfolio
refactoring the routes resulted in incorrect filter for active links in header of large and small screens, the active menu link was used for two purpose navigation and opening subMenu. Fix: use a new filter algorithim, and change the component structure to apply activeLinks correctly, change the structure of menuItems ul and li elements also add styling.

--- a/public/assets/sass/reset/_mobile-menu.scss
+++ b/public/assets/sass/reset/_mobile-menu.scss
@@ -47,6 +47,27 @@
     }
   }
 
+  .menu-item-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    >button {
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+      padding: 0 10px;
+      .mean-expand-class{
+        &:before {
+          content: '\f107';
+          font-family: $icon-font;
+          font-weight: 700;
+        }
+      }
+    }
+  }
+
   .mobile-menu-area {
     width: 100%;
     max-width: 310px;
@@ -102,6 +123,9 @@
   border-bottom: 2px solid $title-color;
   &::-webkit-scrollbar {
     display: none;
+  }
+  .mobile-menu{
+    border-bottom: none;
   }
 
   ul {
@@ -172,17 +196,11 @@
           background-color: transparent;
           color: $title-color;
           border-radius: 50%;
-
-          &:before {
-            content: '\f107';
-            font-family: $icon-font;
-            font-weight: 700;
-          }
         }
       }
 
       &.active-class {
-        >a {
+        >button {
           .mean-expand-class:before {
             content: '\f106';
           }
