--- a/public/assets/sass/template/headers/_header.scss
+++ b/public/assets/sass/template/headers/_header.scss
@@ -218,10 +218,14 @@
     display: flex;
     align-items: center;
     gap: 50px;
-    margin-left: 85px;
+    margin-left: 0px;
+    justify-content: center;
     @include ml {
         gap: 20px;
     }
+
+
+
     .search-btn {
         background: transparent;
         border: 0;
@@ -235,6 +239,42 @@
         padding: 0;
     }
 }
+
+
+
+
+.service-portfolio-button {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    margin-left: 0px;
+    margin-top: 20px;
+    justify-content: center;
+    @include ml {
+        gap: 20px;
+    }
+
+
+
+    .search-btn {
+        background: transparent;
+        border: 0;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        font-size: 14px;
+        font-weight: 600;
+        font-family: $title-font;
+        color: $title-color;
+        padding: 0;
+    }
+}
+
+
+
+
+
 .header-logo {
     padding-top: 15px;
     padding-bottom: 15px;
