fix landing page
fix theme issues, make pricing section responsive, remove extra buttons from hero section, submenu UI fix, removed centralized portfolio

--- a/public/assets/sass/custom.scss
+++ b/public/assets/sass/custom.scss
@@ -101,3 +101,11 @@
 .p-8{
   padding: 8rem 2rem;
 }
+.p-0{
+  padding: 0rem !important;
+}
+.border-white{
+  border-color: $smoke-color !important;
+}
+
+
