--- a/public/assets/sass/reset/_input.scss
+++ b/public/assets/sass/reset/_input.scss
@@ -246,7 +246,7 @@ option {
     &:focus,
     &:hover {
         background-color: $theme-color;
-        color: $white-color;
+        color: $body-font;
     }
 }
 
