--- a/public/assets/sass/base/_variable.scss
+++ b/public/assets/sass/base/_variable.scss
@@ -55,6 +55,7 @@ $body-font-size: 16px;
 $body-line-Height: 26px;
 $body-font-weight: 400;
 $p-line-Height: 1.75;
+$text-small: 10px;
 
 // Device Variation
 $hd: 1921px; // Large Device Than 1920
