--- a/public/assets/sass/template/sections/_portfolio.scss
+++ b/public/assets/sass/template/sections/_portfolio.scss
@@ -253,7 +253,7 @@
   }
 }
 
-/* Portfolio 5 ---------------------------------- */
+/* Portfolio 6 ---------------------------------- */
 .project-area-6 {
   position: relative;
 }
@@ -289,11 +289,11 @@
     opacity: 1;
     height: 100%;
   }
-  .portfolio-thumb {
-    img {
-      width: 100%;
-    }
-  }
+  // .portfolio-thumb {
+  //   img {
+  //     width: 100%;
+  //   }
+  // }
   .portfolio-details {
     position: absolute;
     left: 0;
@@ -400,6 +400,127 @@
   }
 }
 
+/* Portfolio 6 ---------------------------------- */
+.project-slider-showcase-wrap {
+  height: 100vh;
+  padding: 140px 24px 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .project-slider-showcase {
+    width: 100%;
+    height: 100%;
+    .slick-list {
+      height: 100%;
+      .slick-track {
+        height: 100%;
+      }
+      .slick-slide {
+        height: 100%;
+      }
+    }
+  }
+  @include md {
+    padding: 140px 24px 80px;
+  }
+  @include xs {
+    padding: 100px 0px 40px;
+    margin: 0 -12px;
+  }
+  &.style2 {
+    padding: 0;
+    .project-slider-showcase {
+      width: 100%;
+      height: 100vh;
+      .slick-list {
+        height: 100vh;
+        .slick-track {
+          height: auto;
+        }
+        .slick-slide {
+          height: 100vh;
+        }
+      }
+    }
+    @include xs {
+      margin: 0;
+    }
+  }
+}
+.portfolio-wrap.style6 {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  .portfolio-thumb {
+    height: 100%;
+    width: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .portfolio-details {
+    background: $title-color;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px 40px;
+    padding-top: 35px;
+    transition: 0.4s;
+    transform: translate(0, 100%);
+    .portfolio-title {
+      margin-top: -0.05em;
+      margin-bottom: 0;
+      font-size: 36px;
+      a {
+        color: $white-color;
+        &:hover {
+          color: $theme-color;
+        }
+      }
+      @include xxl {
+        font-size: 30px;
+      }
+      @include ml {
+        font-size: 24px;
+      }
+      @include xl {
+        font-size: 20px;
+      }
+      @include lg {
+        font-size: 24px;
+      }
+      @include vxs {
+        font-size: 20px;
+      }
+    }
+    .portfolio-meta {
+      li {
+        a {
+          color: #f6f5f3;
+          &:hover {
+            color: $theme-color;
+          }
+        }
+      }
+    }
+  }
+  &:hover {
+    .portfolio-thumb {
+      img {
+        transform: scale(1.03) translateY(-30px);
+      }
+    }
+    .portfolio-details {
+      transform: translate(0, 0);
+    }
+  }
+}
+
 /*project-area-8*********/
 .project-area-8 {
   .portfolio-wrap.style3 .portfolio-details {
@@ -467,6 +588,138 @@
       max-width: none;
       margin-bottom: 20px;
     }
+  }
+}
+
+/* Portfolio 12 ---------------------------------- */
+.portfolio-wrap.style12 {
+  height: 100%;
+  &:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: -webkit-linear-gradient(
+      180deg,
+      rgba(10, 12, 0, 0) 0%,
+      #0a0c00 100%
+    );
+    background: linear-gradient(180deg, rgba(10, 12, 0, 0) 0%, #0a0c00 100%);
+    transition: 0.4s;
+    opacity: 1;
+    height: 100%;
+  }
+  .portfolio-thumb {
+    height: 100%;
+    width: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+      transform: none;
+      object-fit: cover;
+    }
+  }
+  .portfolio-details {
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+    padding: 0 140px 140px 140px;
+    z-index: 1;
+    transition: 0.4s;
+    opacity: 1;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: flex-end;
+    .media-left {
+      max-width: 746px;
+    }
+    .portfolio-meta {
+      li a {
+        color: $smoke-color;
+      }
+      li {
+        &:after {
+          color: $smoke-color;
+        }
+      }
+    }
+    .portfolio-title {
+      margin-bottom: -0.25em;
+      font-size: 48px;
+      a {
+        color: $smoke-color;
+      }
+    }
+  }
+  .portfolio-details-btn {
+    flex: none;
+  }
+  .link-btn {
+    color: $smoke-color;
+    img {
+      filter: brightness(99) grayscale(99);
+    }
+    &:after,
+    &:before {
+      background: $smoke-color;
+    }
+  }
+}
+@include xl {
+  .portfolio-wrap.style12 .portfolio-details {
+    padding: 0 100px 100px 100px;
+  }
+  .portfolio-wrap.style12 .portfolio-details .portfolio-title {
+    font-size: 36px;
+  }
+  .portfolio-wrap.style12 .portfolio-details .media-left {
+    max-width: 600px;
+  }
+}
+@include lg {
+  .portfolio-wrap.style12 .portfolio-details .portfolio-title {
+    font-size: 32px;
+  }
+  .portfolio-wrap.style12 .portfolio-details {
+    padding: 0 80px 80px 80px;
+  }
+}
+@include md {
+  .portfolio-wrap.style12 .portfolio-details {
+    padding: 0 60px 60px 60px;
+  }
+  .portfolio-wrap.style12 .portfolio-details .portfolio-title {
+    font-size: 28px;
+  }
+  .portfolio-wrap.style12 .portfolio-details .media-left {
+    max-width: 460px;
+  }
+}
+@include sm {
+  .portfolio-wrap.style12 .portfolio-details {
+    padding: 0 40px 40px 40px;
+  }
+  .portfolio-wrap.style12 .portfolio-details .portfolio-title {
+    font-size: 24px;
+  }
+}
+@include xs {
+  .portfolio-wrap.style12 .portfolio-details .media-left {
+    max-width: none;
+    margin-bottom: 30px;
+  }
+  .portfolio-wrap.style12 .portfolio-details {
+    padding: 30px 15px 40px 15px;
+    display: block;
+  }
+  .portfolio-wrap.style12 .portfolio-thumb img {
+    min-height: 300px;
+    object-fit: cover;
+  }
+  .portfolio-wrap.style12 .portfolio-details .portfolio-title {
+    font-size: 22px;
   }
 }
 
