fix broken links, nav fix
fix broken link of services, fix submenu overflow of submenu items

--- a/public/assets/sass/template/sections/_video.scss
+++ b/public/assets/sass/template/sections/_video.scss
@@ -46,7 +46,7 @@
         position: absolute;
         left: 50%;
         top: 50%;
-        background: $white-color;
+        background: transparent;
         color: $title-color;
         margin: -90px 0 0 -90px;
         @include xs {
