--- a/public/assets/sass/template/headers/_header.scss
+++ b/public/assets/sass/template/headers/_header.scss
@@ -97,10 +97,10 @@
         position: absolute;
         text-align: left;
         top: 100%;
-        left: 0;
+        left: 0%;
         background-color: $title-color;
         visibility: hidden;
-        min-width: 330px;
+        min-width: 350px;
         width: max-content;
         padding: 7px;
         left: -14px;
@@ -185,6 +185,9 @@
                         left: 100%;
                         right: auto;
                     }
+                }
+                li.no-sub-menu{
+                    max-width: 300px;
                 }
             }
         }
