fix meta data and blog filter
create server rotues for meta data and generate it during build time, remove filter by tags for blogs, now can only be filtered by categories, fix ui for sub service page

--- a/public/assets/sass/template/headers/_header.scss
+++ b/public/assets/sass/template/headers/_header.scss
@@ -254,9 +254,9 @@
     margin-left: 0px;
     margin-top: 20px;
     justify-content: center;
-    @include ml {
-        gap: 20px;
-    }
+    // @include ml {
+    //     gap: 20px;
+    // }
 
 
 
