--- a/public/assets/sass/template/headers/_header.scss
+++ b/public/assets/sass/template/headers/_header.scss
@@ -89,7 +89,7 @@
                     transform: scaleY(1);
                     z-index: 9;
                 }
-                > ul.limitLeft {
+                > ul.shiftLeft {
                     transform: translateX(-30%);
                 }
             }
@@ -140,7 +140,7 @@
         }
     }
     ul.limitLeft{
-        min-width: 450px;
+        min-width: 230px;
     }
 
     ul.sub-menu {
